Texture node output uses different display space #38813

Closed
opened 2014-02-24 19:38:02 +01:00 by Leon Cheung · 6 comments
Member

System Information
Win7 64bit | FX2700M

Blender Version
Broken: 2.69.11 10f4c62 (2.70 test build)

Short description of error
Output display space looks different from the default display space elsewhere, though it doesn't affect the render result.

Exact steps for others to reproduce the error
Very intuitive. Please see below:

output_view.jpg
tex_node_view.blend

Thanks for checking.

**System Information** Win7 64bit | FX2700M **Blender Version** Broken: 2.69.11 10f4c62 (2.70 test build) **Short description of error** Output display space looks different from the default display space elsewhere, though it doesn't affect the render result. **Exact steps for others to reproduce the error** Very intuitive. Please see below: ![output_view.jpg](https://archive.blender.org/developer/F78782/output_view.jpg) [tex_node_view.blend](https://archive.blender.org/developer/F78780/tex_node_view.blend) Thanks for checking.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu

This issue was referenced by blender/blender-addons-contrib@39cad75dcb

This issue was referenced by blender/blender-addons-contrib@39cad75dcb5401cb66969402ef680b76cb8b3146

This issue was referenced by 39cad75dcb

This issue was referenced by 39cad75dcb5401cb66969402ef680b76cb8b3146
Brecht Van Lommel self-assigned this 2014-02-24 20:19:01 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 39cad75dcb.

Closed by commit 39cad75dcb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38813
No description provided.