Fix T38813: missing color management in texture nodes preview.