source/blender/nodes/texture/node_texture_util.c
@@ -70,7 +70,7 @@ static void tex_call_delegate(TexDelegate *dg, float *out, TexParams *params, sh
 		dg->fn(out, params, dg->node, dg->in, thread);
 
 		if (dg->cdata->do_preview)
-			tex_do_preview(dg->preview, params->previewco, out);
+			tex_do_preview(dg->preview, params->previewco, out, dg->cdata->do_manage);
 	}
 }
 
@@ -127,13 +127,13 @@ void params_from_cdata(TexParams *out, TexCallData *in)
 	out->mtex = in->mtex;
 }
 
-void tex_do_preview(bNodePreview *preview, const float coord[2], const float col[4])
+void tex_do_preview(bNodePreview *preview, const float coord[2], const float col[4], bool do_manage)
 {
 	if (preview) {
 		int xs = ((coord[0] + 1.0f) * 0.5f) * preview->xsize;
 		int ys = ((coord[1] + 1.0f) * 0.5f) * preview->ysize;
 		
-		BKE_node_preview_set_pixel(preview, col, xs, ys, 0); /* 0 = no color management */
+		BKE_node_preview_set_pixel(preview, col, xs, ys, do_manage);
 	}
 }
 
