source/blender/nodes/texture/nodes/node_texture_viewer.c
@@ -52,7 +52,7 @@ static void exec(void *data, int UNUSED(thread), bNode *UNUSED(node), bNodeExecD
 		params_from_cdata(&params, cdata);
 
 		tex_input_rgba(col, in[0], &params, cdata->thread);
-		tex_do_preview(execdata->preview, params.previewco, col);
+		tex_do_preview(execdata->preview, params.previewco, col, cdata->do_manage);
 	}
 }
 
